# bgtui

./: Makefile  dev-requirements.txt  pyproject.toml  requirements.txt  setup.py
src/: main.py
