[build-system]
requires = ["setuptools>=45"]
build-backend = "setuptools.build_meta"

[project]
name = "bgtui"
description = "General purpose Boardgame Textual User Interface"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
keywords = ["boardgame", "score", "tui"]
authors = [
    {name = "Bence Vidosits", email = "vidosits.bence.dev@gmail.com"}
]
maintainers = [
    {name = "Bence Vidosits", email = "vidosits.bence.dev@gmail.com"}
]
classifiers = [
    "Programming Language :: Python :: 3",
]

dependencies = [
    "textual[dev]>=0.26.0",
]

[project.optional-dependencies]
dev = [
    "pip-tools>=6.13.0",
    "black>=22.3.0",
    "ruff>=0.0.267",
    "toml>=0.10.2",
    "mypy>=0.971",
]

[project.urls]
repository = "https://github.com/bvidosits/bgtui"

[tool.mypy]
exclude =[".venv/", "__pycache__"]
python_version = "3.10"
warn_unused_configs = true
disallow_any_unimported = true
disallow_any_decorated = false
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = false
disallow_untyped_decorators = false
no_implicit_optional = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_return_any = false
warn_unreachable = true
allow_untyped_globals = false
allow_redefinition = false
local_partial_types = true
implicit_reexport = true
strict_equality = true
show_error_context = false
show_error_codes = true
pretty = true
color_output = true

[tool.bandit]
skips = ["B404"]
exclude =["__init__.py"]
exclude_dirs = ["__pycache__/", "/.venv/", "/tests/"]

[tool.ruff]
line-length = 88
target-version = "py310"
fix = true
unfixable = []

select = [
  "F", # pyflakes
  "E", # pycodestyle
  "W", # pycodestyle
  "I", # isort
  "N", # pep8-naming
  "D", # pydocstyle
  "YTT", # flake8-2020
  "ANN", # flake8-annotations
  "S", # bandit
  "B", # flake8-bugbear
  "Q", # flake8-quotes
  "A", # flake8-builtins
  "C4", # flake8-comprehensions
  "T10", # flake8-debugger
  "DTZ", # flake8-datetimez
  "INT", # flake8-gettext
  "G", # flake8-logging-format
  "PYI", # flake8-pyi
  "SIM", # flake8-simplify
  "INT", # flake8-gettext
  "PTH", # flake8-use-pathlib
  "ERA", # eradicate
  "PL", # pylint
]

ignore = [
    "E501", # pycodestyle: line too long
]

[tool.ruff.isort]
profile = "google"

